# MontadorSB

./: .gitignore  CMakeLists.txt  README.md
include/: ArquivoHandler.hpp  error.hpp  montador.hpp  preProcessador.hpp  utils.hpp
src/: ArquivoHandler.cpp  ArquivoHandler.hpp  erro.cpp  main.cpp  montador.cpp  preProcessador.cpp  utils.cpp
test/: montadorTest.cpp  preProcessadorTest.cpp  test.cpp  utilsTest.cpp
test/files/: error.asm  exemplo2.asm  exemplo3.asm  operacaoInexistente.asm  preProcess.asm  preProcess1.asm  preProcess1.pre  preProcess2.asm  rotuloDuplicado.asm
